Adding Location dialog

--- a/GPSDemo/res/layout/activity_enduser.xml
+++ b/GPSDemo/res/layout/activity_enduser.xml
@@ -11,7 +11,7 @@
     tools:context="com.example.gpsdemo.MainActivity" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/trackID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/track_text" />
